--- a/index.html
+++ b/index.html
@@ -4,31 +4,16 @@
 		<title>Yveete | Home</title>
 		<link rel="icon" href= "icons/rel-icon-yveete.png">
 		<link rel="stylesheet" href="main.css">
-		<script>
-		//This reloads the dictionary.js file
-		var enableDict = localStorage.getItem('enableDict');
-		if (enableDict == "true") {
-			setInterval(function() {
-				var head= document.getElementsByTagName('head')[0];
-			    var script= document.createElement('script');
-		   	    script.type= 'text/javascript';
-			    script.onreadystatechange= function () {loadDict();}
-		 	    script.onload= function () {loadDict();}
-			    script.src= 'dictionary.js';
-			    head.appendChild(script);
-			}, 1000);
-		}
-		</script>
+		<link rel="stylesheet" href="awesomplete.css">
 	</head>
 	<body id="body">
-		<div class="allHeader">
+		<div id="allHeader">
 			<img id="logo" src="icons/yveete-logo-resized.png">
 	      	<div allign="left" id="mainHeader">
 				<p class="textTitle"><br/>Yveete <span>V2</span></p>
 			</div>
 		</div>
 		<div id="blur"></div>
-		<div id="greySpace"></div>
 		<center>
 			<!-- Hidden Components -->
 			<canvas id="mycanvas" height="400" width="550"></canvas>
@@ -46,15 +31,20 @@
 			<div id="dict_div" hidden></div>
 			<!-- Visible Components -->
 			<br>
-			<div id="dialog"></div>
-			<input type="text" id="inputText" value='Talk to Yveete' autocapitalize="none"/>
+			<div id="all">
+				<div id="dialog"></div>
+				<input type="text" id="inputText" value='Talk to Yveete' autocapitalize="none"/>
+			</div>
 		</center>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.min.js"></script>
 		<script src="scripts/main-script/mainYveete.js"></script> 
-		<script src="scripts/additional-scripts/break_even_chart.js"></script>
-		<script src="scripts/ajax-scripts/weather.js"></script>	
+		<script src="scripts/additional-scripts/break_even_chart.js"></script>	
 		<script src="scripts/ajax-scripts/news.js"></script>
 		<script src="scripts/ajax-scripts/dictionary.js"></script>
 		<script src="scripts/ajax-scripts/xkcd_jokes.js"></script>
+		<script src="scripts/additional-scripts/awesomplete.js"></script>
+		<script src="scripts/additional-scripts/droplist.js"></script>
+		<script src="scripts/additional-scripts/functions.js"></script>
 	</body>
 </html>
