--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>		
 		<title>Yveete | Home</title>
 		<link rel="icon" href= "icons/rel-icon-yveete.png">
-		<link rel="stylesheet" href="main.css">
-		<link rel="stylesheet" href="awesomplete.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/awesomplete.css">
 	</head>
 	<body id="body">
 		<div id="allHeader">
