--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>		
 		<title>Yveete | Home</title>
-		<link rel="icon" href= "icons/rel-icon-yveete.png">
+		<link rel="icon" href="icons/rel-icon-yveete.png">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/awesomplete.css">
+		<meta charset='UTF-8'>
 	</head>
 	<body id="body">
 		<div id="allHeader">
@@ -16,14 +17,17 @@
 		<div id="blur"></div>
 		<center>
 			<!-- Hidden Components -->
-			<canvas id="mycanvas" height="400" width="550"></canvas>
-			<div id="whiteCanvas"></div>
-			<button id="canvasBtn" onclick="exit();">Close</button>
 			<input type="text" id="titleInput" placeholder="Type a title"/><br>
 			<center><textarea rows="5" cols="75" id="prompt1" placeholder="Type here"></textarea></center>
 			<center><textarea rows="5" cols="75" id="prompt2" placeholder="Type code here"></textarea></center>
 			<textarea rows="5" cols="75" id="prompt3" value="" placeholder="smartcode"></textarea>
-			<center><input id="btnPrompt" type="button" onclick="submit();" value="Submit"></center>
+			<center><input id="btnPrompt" type="button" value="Submit"></center>
+			<center>
+				<div id='debugAlert'>
+					<p id='error'>error</p>
+				</div>
+				<input id='debuggerBtn' type='button' value='Oops!'>
+			</center>
 			<div id="weather" hidden></div>
 			<div id='results' hidden></div>
 			<p hidden>Current Temp: <span id="temp"></span></p>
@@ -37,12 +41,8 @@
 			</div>
 		</center>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.1.1/Chart.min.js"></script>
 		<script src="scripts/main-script/mainYveete.js"></script> 
-		<script src="scripts/additional-scripts/break_even_chart.js"></script>	
 		<script src="scripts/ajax-scripts/news.js"></script>
-		<script src="scripts/ajax-scripts/dictionary.js"></script>
-		<script src="scripts/ajax-scripts/xkcd_jokes.js"></script>
 		<script src="scripts/additional-scripts/awesomplete.js"></script>
 		<script src="scripts/additional-scripts/droplist.js"></script>
 		<script src="scripts/additional-scripts/functions.js"></script>
